fixed bug with select block on mobile

--- a/src/styles/block.css
+++ b/src/styles/block.css
@@ -5,6 +5,9 @@
 
   &--focused &__content {
     background: var(--color-gallery);
+  }
+
+  &--selected &__content {
     /**
      * Workaround Safari case when user can select inline-fragment with cross-block-selection
      */
